salesforce-port/force-app/main/default/objects/Tax_Rate__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <type>Lookup</type>
    <referenceTo>Expense_Policy__c</referenceTo>
    <relationshipLabel>Tax Rates</relationshipLabel>
    <relationshipName>Tax_Rates</relationshipName>
</CustomField>