salesforce-port/force-app/main/default/objects/Tax_Rate__c/fields/Rate_Percent__c.field-meta.xml
<CustomField>
    <fullName>Rate_Percent__c</fullName>
    <label>Rate Percent</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>